tests/ui/outer-attr.stderr
error: `#[used]` attribute cannot be used on expressions
 --> tests/ui/outer-attr.rs:8:5
  |
8 |     #[used(linker)]
  |     ^^^^^^^^^^^^^^^
  |
  = help: `#[used]` can only be applied to statics
